--- a/front/src/pages/Register/registerStyle.css
+++ b/front/src/pages/Register/registerStyle.css
@@ -14,15 +14,13 @@
 }
 
 .container-register-content {
-  margin-top: 3vw;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   min-width: 400px;
   min-height: 320px;
-  height: 38vw;
-  width: 50vw;
+  height: 100%;
+  width: 50%;
   border-radius: 25px;
   border: 0.9px solid rgba(0, 0, 0, 0.604);
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
@@ -38,10 +36,13 @@
 
 .container-first-content-register,
 .container-second-content-register {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   text-align: center;
-  width: 50%;
-  margin-left: 5vw;
+  width: 100%;
   height: 100%;
+  padding: 5% 0 5% 15% ;
 }
 
 .custom-file-input-register {
@@ -80,23 +81,19 @@
   transform: translate(-50%, -50%);
 }
 
-.addPhoto-register {
-  margin-right: 6vw;
-  background: transparent !important;
-  font-weight: bold;
-  color: rgba(115, 83, 186, 1);
-}
   
 .input-register {
-  width: 70%;
+  width: 100%;
   padding: 2% 5% 3% 5%;
-  height:3vw;
-  font-weight: bold;
+  height:3.2vw;
   color: rgba(115, 83, 186, 1);
   border-bottom: 1px solid rgb(0, 0, 0);
   background-color: transparent;
   background: transparent !important;
-  font-size: 0.8vw;
+  font-weight: bold;
+  font-size: 77%;
+  outline: none;
+  caret-color: black;
 }
   
 .input-register::placeholder {
@@ -108,37 +105,39 @@
 }
 
 .input-weight-register {
-  font-size: 0.8vw;
+  font-size: 77%;
   color: black;
   background-color: transparent;
   color: rgba(115, 83, 186, 1);
   background: transparent !important;
   font-weight: bold;
   border-bottom: 1px solid rgb(0, 0, 0);
-  width: 33%;
+  width: 47%;
   height: 100%;
   height: 50px;
+  outline: none;
+  caret-color: black;
 
 }
 
 .input-hight-register {
-  font-size: 0.8vw;
+  font-size: 77%;
   color: black;
   background-color: transparent;
   color: rgba(115, 83, 186, 1);
   background: transparent !important;
   font-weight: bold;
   border-bottom: 1px solid rgb(0, 0, 0);
-  width: 34%;
+  width: 47%;
   height: 100%;
-  margin-left: 3%;
   height: 50px;
+  outline: none;
+  caret-color: black;
 
 }
 
 .weightHight-register{
   margin-top: 2vw;
-  margin-bottom: -1.5vw;
 }
 
 .input-hight-register::placeholder,
@@ -154,8 +153,7 @@
   .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+
   }
   
   .switch input {
@@ -164,104 +162,81 @@
     height: 0;
   }
   
-  .slider {
+  .sliderR-round {
+      left: 10px;
     position: absolute;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 4vw;
-    height: 2.2vw;
+    width: 50px;
+    height: 23px;
     -webkit-transition: .4s;
     transition: .4s;
     background-color: #9c9c9c;
+    border-radius: 34px;
+
   }
   
-  .slider:before {
+  .sliderR-round:before {
     position: absolute;
     content: "";
-    height: 1.6vw;
-    width: 1.6vw;
-    top: 0.3vw;
-    left:0.5vw;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    left:5px;
     bottom: 4px;
     -webkit-transition: .4s;
     transition: .4s;
     background-color: #ffffff;
   }
   
-  input:checked + .slider {
+  input:checked + .sliderR-round {
     background-color: rgba(115, 83, 186, 1);
+    border-radius: 34px;
+
   }
 
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(1.5vw);
+  input:checked + .sliderR-round:before {
+    -webkit-transform: translateX(23px);
+    transform: translateX(25px);
   }
   
-  .slider.round {
-    border-radius: 34px;
-  }
+ 
   
-  .slider.round:before {
+  .sliderR.round:before {
     border-radius: 50%;
   }
   
  /*button config*/
-  .divButton{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 8vw;
-  }
-  .registerprofessionalProfile{
-    font-weight: bold;
-    font-size: 0.8vw;
-  }
-  
-  .professionalProfile {
-    font-size: 0.8vw;
-  }
-  
-
-
-  /* Button config */
-.divregisterprofessionalProfile {
-  width: 60%;
-  padding: 8% 5% 3% 5%;
-  background-color: transparent;
-  background: transparent !important;
+ .divButton-register {
   display: flex;
-  align-items: center;
   justify-content: center;
-  font-size: 15px;
+  padding: 2%;
+  
 }
 
+  
 
-.professionalProfile {
-  font-size: 0.8vw;
+
+
+/* Button config */
+.registerprofessionalProfile{
+  font-weight: bold;
+  font-size: 77%;
 }
 
 /* Button config */
-.diveditprofessionalProfile {
-  width: 70%;
-  padding: 8% 5% 3% 5%;
-  background-color: transparent;
-  background: transparent !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
+.divregisterprofessionalProfile {
+width: 70%;
+padding: 8% 5% 3% 5%;
+background-color: transparent;
+background: transparent !important;
+display: flex;
+align-items: center;
+justify-content: left;
+font-size: 15px;
 }
 
-.editprofessionalProfile {
-  font-size: 0.8vw;
-  font-weight: bold;
-}
-  .buttonLogin {
+/* Button config */
+  .buttonSave {
     background-color: rgba(115, 83, 186, 1);
     height: 3vw;
     width: 8vw;
@@ -275,10 +250,14 @@
     color: rgb(255, 255, 255);
     cursor: pointer;
   }
-  .buttonLogin:hover {
+  .buttonSave:hover {
     background-color:rgb(83, 39, 180);
     color: rgb(255, 255, 255);
     cursor: pointer;
+  }
+  form{
+    width: 100%;
+    height: 100%;
   }
   
   
