--- a/front/src/pages/SearchResults/styles.css
+++ b/front/src/pages/SearchResults/styles.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
-  /* justify-content: space-evenly; */
   align-items: center;
   color: #000000;
   font-family: "Poppins", sans-serif;
@@ -13,28 +12,27 @@
 }
 
 .search-box {
-  height: 1.8rem;
-  width: 12rem;
+  height: 2.5rem;
+  width: 45rem;
   background-color: #dcdddf;
-  border-radius: 1rem;
+  border-radius: 1.2rem;
   display: flex;
   align-items: center;
-  padding-left: 1rem;
+  padding: 0rem 0.8rem 0rem 1rem;
 }
 
 .search-text {
   border: none;
   background: none;
   outline: none;
-  font-size: 0.8rem;
+  font-size: 1rem;
   width: 100%;
   caret-color: black;
 }
 
 .container-search-results {
-  width: 42rem;
+  width: 45rem;
   height: 32rem;
-  /* padding: 0 2rem; */
   color: black;
   background-color: #ffffffd5;
   display: flex;
@@ -51,7 +49,17 @@
   grid-auto-rows: 100px;
   align-items: center;
   overflow-y: auto;
-  padding-top: 1rem;
+  padding: 1rem 2rem;
+}
+
+.icon-search-btn {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  color: #3d3d3d;
+}
+.icon-search-btn:hover {
+  cursor: pointer;
 }
 
 /* Estilizando a barra de rolagem */
@@ -77,5 +85,8 @@
   }
   .search-results {
     grid-template-columns: 100%;
+  }
+  .search-box {
+    width: 25rem;
   }
 }
