editing css: landing page contact profile button
adding input name on pages:
interface IUpdateUserData front
register
edit

--- a/front/src/pages/ContactProfile/styles.css
+++ b/front/src/pages/ContactProfile/styles.css
@@ -51,3 +51,8 @@ body {
   background-color: rgb(135, 105, 199);
   cursor: pointer;
 }
+.div-buttonAdd{
+  width: 90%;
+  display: flex;
+  justify-content: right;
+}
