--- a/front/src/pages/ContactProfile/styles.css
+++ b/front/src/pages/ContactProfile/styles.css
@@ -20,7 +20,7 @@ body {
 
 .container-profile{
   font-family: "Poppins", sans-serif;
-  width: 75vw;
+  max-width: 75vw;
   display: flex;
   flex-direction: column;
   align-items: center;
