--- a/front/src/pages/FullCards/styles.css
+++ b/front/src/pages/FullCards/styles.css
@@ -12,7 +12,7 @@
 
 .structure-carrossel{
     position: absolute;
-    width: 25%;
+    max-width: 25%;
     overflow-y: scroll;
     overflow-x: hidden;
     right: 5%;
