--- a/front/src/pages/Login/loginStyle.css
+++ b/front/src/pages/Login/loginStyle.css
@@ -22,9 +22,9 @@
   align-items: center;
   gap: 50px;
   width: 20vw;
-  height: 27vw;
-  min-width: 100px;
-  min-height: 250px;
+  height: 25vw;
+  min-width: 20rem;
+  min-height: 30rem;
   border-radius: 25px;
   border: 0.9px solid rgba(0, 0, 0, 0.604);
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.638);
@@ -54,7 +54,7 @@
 }
 
 .input-login {
-  font-size: 0.9vw;
+  font-size: 1rem;
   width: 70%;
   height: 20%;
   font-weight: bold;
@@ -77,30 +77,23 @@
 
 
 /* Button config */
-.divButton-edit {
+.divButton-login {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-weight: bold;
-  font-size: 0.8vw;
+  font-size: 0.9rem;
 }
 
-.forgetPassEdit:hover {
-  color: rgba(115, 83, 186, 1);
-}
 
 .registerOption {
   color: rgba(115, 83, 186, 1);
   cursor: pointer;
-}
-
-.registerOption {
-  color: rgba(115, 83, 186, 1);
-  cursor: pointer;
-  animation: brilho 0.5s infinite alternate;
 }
 
 .buttonLogin {
+  width: 6rem;
+  height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,9 +102,7 @@
   border-radius: 25px;  
   padding: 20px 34px;
   font-family: Poppins;
-  font-size: 0.8vw;
-  font-weight: 800;
-  line-height: 20px;
+  font-size: 0.8rem;
   letter-spacing: 0.11em;
   color: #FFFFFF;
   
@@ -129,11 +120,5 @@
   gap: 30px;
 }
 
-@media (max-width: 780px) {
-  .container-login-content {
-    width: 300px;
-    height: 320px;
-  }
-}
 
 
