updates in multer

--- a/front/src/components/PhotoProfile/styles.css
+++ b/front/src/components/PhotoProfile/styles.css
@@ -35,14 +35,11 @@
   position: absolute;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 30px;
+  height: 30px;
   bottom: 40px;
   right: 0;
   border-radius: 30px;
 }
 
-
-.icon-editpage {
-    
-  /* z-index: 2; */
-}
