--- a/front/src/pages/ContactProfile/styles.css
+++ b/front/src/pages/ContactProfile/styles.css
@@ -2,8 +2,17 @@ body {
   caret-color: transparent;
 }
 
-.structure-profile{
+.structure-contact-profile{
   display: flex;
+  justify-content: center;
+}
+
+.container-contact-profile{
+  font-family: "Poppins", sans-serif;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .structure-carrossel{
