--- a/front/src/components/PhotoProfile/styles.css
+++ b/front/src/components/PhotoProfile/styles.css
@@ -38,8 +38,12 @@
   justify-content: center;
   width: 30px;
   height: 30px;
-  bottom: 40px;
-  right: 0;
+  bottom: 50px;
+  right: 20px;
   border-radius: 30px;
+}
+.icon-edit-container:hover {
+  cursor: pointer;
+  scale: 1.2;
 }
 
