--- a/front/src/pages/SearchResults/styles.css
+++ b/front/src/pages/SearchResults/styles.css
@@ -13,7 +13,7 @@
 
 .search-box {
   height: 2.5rem;
-  width: 45rem;
+  width: 45%;
   background-color: #dcdddf;
   border-radius: 1.2rem;
   display: flex;
